<?xml version="1.0"?>
<package>
  <name>raw_video_stream</name>
  <version>1.0.0</version>

  <description>
    The raw_video_stream package contains a node to publish a video
    stream from a raw binary file in ROS image topics.
  </description>

  <maintainer email="peterpolidoro@gmail.com">Peter Polidoro</maintainer>
  <author>Peter Polidoro</author>

  <url type="website">https://github.com/janelia-ros/raw_video_stream.git</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nodelet</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nodelet</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
